--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GithubProfileApp</string>
+    <string name="enter">ENTER</string>
+    <string name="enter_github_username">Enter Github Username</string>
 </resources>
