fix issue with aapt & add statistics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">GithubProfileApp</string>
+    <string name="enter_github_user_name">Enter Github User Name</string>
+
 </resources>
 
 
